# End-to-end-mlops-with-mlflow

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.py
notebook/: medical-cost-prediction-r2-99-68.ipynb
src/api/: app.py
src/data/: data_loader.py  preprocessor.py
src/models/: trainer.py
src/pipeline/: predict_pipeline.py  train_pipeline.py
src/schemas/: medical.py
src/utils/: helpers.py
