[project]
name = "medical-cost-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "mlflow>=3.8.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psutil==7.2.1",
    "pydantic-settings>=2.13.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "xgboost>=3.1.2",
]
